perf: optimize arena lookups and improve thread safety
- Replaced linear arena lookups with O(1) player and arena mappings

- Reduced overhead in movement and combat event handling

- Added thread-safe match history updates

- Improved data consistency and concurrent operation safety